force-app/main/default/objects/DM_Contingency_Status_Code__c/DM_Contingency_Status_Code__c.object-meta.xml
<CustomObject>
    <label>DM Contingency Status Code</label>
    <nameField>
        <label>DM Contingency Status Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contingency Status Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>