force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM CL Contract</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>Contingency Status Codes</relationshipLabel>
    <relationshipName>Contingency_Status_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>