force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_Contingency_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>DM_Contingency_Status_Code__c</fullName>
    <label>DM Contingency Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy (B)</fullName>
            </value>
            <value>
                <fullName>Deceased (D)</fullName>
            </value>
            <value>
                <fullName>Fraudulent (F)</fullName>
            </value>
            <value>
                <fullName>Duplicate (K)</fullName>
            </value>
            <value>
                <fullName>No Communication (X)</fullName>
            </value>
            <value>
                <fullName>SCRA (S)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>