force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_Contingency_Status_Code_Expiry_Proces__c.field-meta.xml
<CustomField>
    <fullName>DM_Contingency_Status_Code_Expiry_Proces__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Contingency Status Code Expiry Proces</label>
    <type>Checkbox</type>
</CustomField>