force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_Contingency_Status_Code_Revoked_On__c.field-meta.xml
<CustomField>
    <fullName>DM_Contingency_Status_Code_Revoked_On__c</fullName>
    <label>DM Contingency Status Code Revoked On</label>
    <type>Date</type>
</CustomField>