force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_Invalidate_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_Invalidate_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Invalidate Contract</label>
    <type>Checkbox</type>
</CustomField>