force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_Stop_Accruals__c.field-meta.xml
<CustomField>
    <fullName>DM_Stop_Accruals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Stop Accruals</label>
    <type>Checkbox</type>
</CustomField>