force-app/main/default/objects/DM_Contingency_Status_Code__c/fields/DM_Suspend_Disbursals__c.field-meta.xml
<CustomField>
    <fullName>DM_Suspend_Disbursals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Suspend Disbursals</label>
    <type>Checkbox</type>
</CustomField>